	New installation PREFIX is now 'net' (and not 'host').
20190320 (feh)
	Added dual-stack capabilities for tcpserver applying the
  pseudo IP address ':0' on call (common now for all servers).
  Rewrote IPv4 CIDR address evaluation for rules.
  MacOS has already function wait -> waiter (in rblsmtpd).
  ucspi-tcp6-1.10.3
20190404 (feh)
	Fixed integration bug in tcpserver changing 'uid' too early (tx. Steve Meier).
	ucspi-tcp6-1.10.4
20190408 (feh)
	Refactored ip6_bit.c annd ip4_bit.c + depend routines. CIDR now working again.
	ucspi-tcp6-1.10.5
20190608 (feh)
	Added fehQlibs-12 compatibility. 
	ucspi-tcp6-1.10.6
20190623 (feh)
	Fix for tcprulcescheck abending if environment variable IP is not present.
	Fix for potential stack corruption calling tcpserver/tcpclient with '0' for hostname.
	Removed constraints on building IPv4 CIDR rules with tcprules.
	Cleanups and tweaked package/rts to work well again. Beta-tested by Veera.
20190714 (feh)
	Fixed bug in rblsmtpd not calculating the inverse IPv6 address correctly.
	package/rts usage explained (README.rts) and finally straightend.
	tcprules and tcprulescheck improved for IPv4/IPv6 CIDR address reporting.
	ucspi-tcp6-1.10.7
20190818 (feh)
	Added compatibility with fehQlibs-13.
	Fixed incorrect behavior for given IPv4 address als hostname for tcpserver
	and tcpclient.
	Added tcprulescheck verbose info message.
	ucspi-tcp6-1.10.8
20190818 (feh)
	Relabled ucspi-tcp6-1.10.8 as ucspi-tcp6-1.11.0 to be used for s/qmail with fehQlibs.
20190912 (feh)
	ucspi-tcp6 requires now fehQlibs-13.
	ucspi-tcp6-1.11.0
20191228 (feh)
	tcpserver and tcpclient set ipv4socket = 1 upon call with IPv4 address on input
	to improve compatibility with NetBSD/MacOS.
	ucspi-tcp6-1.11.1
20200213 (feh)
	Improved stability of rblsmtpd (which might segfault on IPv6 connections).
	ucspi-tcp6-1.11.2
20200220 (feh)
	Fixed rblsmtpd core dumping due to wrong decrement of IPv6 loop variable. 
	ucspi-tcp6-1.11.3
	

ucspi-tcp6 -- version: 1.11. (final)
